--- a/src/DocBundle/Resources/views/parametrage/index.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/index.html.twig
@@ -43,7 +43,7 @@
                                 <td>{{ parametrage.ordre }}</td>
                                 <td>{{ parametrage.type }}</td>
                                 <td>{{ parametrage.reference }}</td>
-                                <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">{{ parametrage.lastPdfSource.title }}</a></td>
+                                <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">Voir le pdf</a></td>
                                 <td>
                                     {% if parametrage.deleting %}
                                         <div class="deleting">
