--- a/src/DocBundle/Resources/views/parametrage/index.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/index.html.twig
@@ -37,7 +37,7 @@
                                 <td>
                                     {{ parametrage.partenaires }}
                                 </td>
-                                <td>{{ parametrage.collectivites }}</td>
+                                <td class="collectivites">{{ parametrage.collectivites }}</td>
                                 <td>{{ parametrage.contrat }}</td>
                                 <td>{{ parametrage.libelle }}</td>
                                 <td>{{ parametrage.ordre }}</td>
