--- a/src/DocBundle/Resources/views/parametrage/csv_form.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/csv_form.html.twig
@@ -31,9 +31,10 @@
                                 </div>
                                 <div class="modal-body">
                                     <p id="requestStatus">Import du fichier en cours.</p>
-                                    {% image '@DocBundle/Resources/public/images/default.svg' %}
-                                    <img src="{{ asset_url }}" alt="loader" />
-                                    {% endimage %}
+                                    <div class="spinner">
+                                        <div class="dot1"></div>
+                                        <div class="dot2"></div>
+                                    </div>
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
