--- a/src/DocBundle/Resources/views/version/version_params.html.twig
+++ b/src/DocBundle/Resources/views/version/version_params.html.twig
@@ -24,13 +24,10 @@
                 </h3>
             </div>
             <div class = "panel-body">
-                <div class="row">
-                    <div class="col-sm-12">
-                        <div class="label-warning hide patch">
-                            <h4><strong>Attentioin :</strong>Ces changements ne seront pas reportés dans le paramétrage en cours du réseau.</h4>
-                        </div>
-                    </div>
+                <div class="alert alert-warning hide patch">
+                    <strong>Attentioin:</strong> Ces changements ne seront pas reportés dans le paramétrage en cours du réseau..
                 </div>
+
 
                 <table class="table table-striped table-condensed responsive no-wrap table-bordered table-hover" id="source">
                     <thead>
