--- a/src/DocBundle/Resources/views/parametrage/edit.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/edit.html.twig
@@ -12,7 +12,7 @@
             <div class = "panel-body">
                 {% if confirmation is defined %}
                     <div class="alert alert-success">
-                        <strong>Success!</strong> Le paramètre a été modifié avec succès.
+                        <strong>Success:</strong> Le paramètre a été modifié avec succès.
                     </div>
                 {% endif %}
                 <div class="well">
