--- a/src/DocBundle/Resources/views/version/version_params.html.twig
+++ b/src/DocBundle/Resources/views/version/version_params.html.twig
@@ -25,7 +25,7 @@
             </div>
             <div class = "panel-body">
                 <div class="alert alert-warning hide patch">
-                    <strong>Attentioin:</strong> Ces changements ne seront pas reportés dans le paramétrage en cours du réseau..
+                    <strong>Attention:</strong> Ces changements ne seront pas reportés dans le paramétrage en cours du réseau..
                 </div>
 
 
@@ -49,9 +49,9 @@
                             <td>
                                 {{ parametrage.partenaires }}
                             </td>
-                            <td>{{ parametrage.collectivites }}</td>
+                            <td class="collectivites">{{ parametrage.collectivites }}</td>
                             <td>{{ parametrage.contrat }}</td>
-                            <td>{{ parametrage.libelle }}</td>
+                            <td class="collectivites">{{ parametrage.libelle }}</td>
                             <td>{{ parametrage.ordre }}</td>
                             <td>{{ parametrage.type }}</td>
                             <td>{{ parametrage.reference }}</td>
@@ -59,12 +59,12 @@
                             <td class="hide patch">
                                 <ul>
                                     <li>
-                                        <a href="{{ path('parametrage_delete', { 'id': parametrage.id }) }}">
+                                        <a href="{{ path('archiveparam_delete', { 'id': parametrage.id }) }}">
                                             <span class="glyphicon glyphicon-remove">Supprimer</span>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="{{ path('parametrage_edit', { 'id': parametrage.id }) }}">
+                                        <a href="{{ path('archiveparam_edit', { 'id': parametrage.id }) }}">
                                             <span class="glyphicon glyphicon-pencil">Modifier</span>
                                         </a>
                                     </li>
@@ -74,6 +74,13 @@
                     {% endfor %}
                     </tbody>
                 </table>
+                <ul class="pagination pull-right btn-group">
+                    {% for p in range(1, maxPerPage) %}
+                        <li{% if p == page %} class="active"{% endif %}>
+                            <a href="{{ path('version_history_params', {'id': version.id, 'page': p}) }}">{{ p }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
             </div>
             <div class="panel-footer">
                 <button type="button" class="btn btn-primary inline" data-toggle="modal" data-target="#myModal">
@@ -99,10 +106,14 @@
                         </div>
                         {{ form_start(form, {'attr': {'id': 'generateForm', 'class': 'form-horizontal'}}) }}
                             <div class="modal-body">
-                                <!--<p id="requestStatus">Génération en cours.</p>
-                                {% image '@DocBundle/Resources/public/images/default.svg' %}
-                                <img src="{{ asset_url }}" alt="loader" />
-                                {% endimage %}-->
+                                <div class="loading hide">
+                                    <p id="requestStatus">Génération en cours...</p>
+                                    <div class="spinner">
+                                        <div class="dot1"></div>
+                                        <div class="dot2"></div>
+                                    </div>
+                                </div>
+                                <div class="load-form">
                                     <div class="form-group">
                                         {{ form_label(form.numero, "N° Version", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
                                         {{ form_errors(form.numero) }}
@@ -117,10 +128,11 @@
                                             {{ form_widget(form.message, {'attr': {'class': 'form-control', 'required':'required'}}) }}
                                         </div>
                                     </div>
+                                </div>
 
                             </div>
                             <div class="modal-footer">
-                                <button type="submit" class="btn btn-primary">Générer</button>
+                                <span class="load-form"><button type="submit" class="btn btn-primary">Générer</button></span>
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
                             </div>
                         {{ form_end(form) }}
