--- a/src/DocBundle/Resources/views/parametrage/index.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/index.html.twig
@@ -28,7 +28,9 @@
                             <th>Type</th>
                             <th>Reference</th>
                             <th>Pdf</th>
-                            <th>Actions</th>
+                            {% if is_granted('ROLE_AGENT') %}
+                                <th>Actions</th>
+                            {% endif %}
                         </tr>
                         </thead>
                         <tbody>
@@ -44,6 +46,7 @@
                                 <td>{{ parametrage.type }}</td>
                                 <td>{{ parametrage.reference }}</td>
                                 <td><a href="{{ path('parametrage_show_pdf', { 'id': parametrage.id }) }}">Voir le pdf</a></td>
+                            {% if is_granted('ROLE_AGENT') %}
                                 <td>
                                     {% if parametrage.deleting %}
                                         <div class="deleting">
@@ -87,6 +90,7 @@
                                         </div>
                                     {% endif %}
                                 </td>
+                            {% endif %}
                             </tr>
                         {% endfor %}
                         </tbody>
