--- a/src/DocBundle/Resources/views/parametrage/form.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/form.html.twig
@@ -52,13 +52,6 @@
             {{ form_widget(form.ordre, {'attr': {'class': 'form-control'}}) }}
         </div>
     </div>
-    <div class="form-group">
-        {{ form_label(form.type, "Type", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-        {{ form_errors(form.type) }}
-        <div class="col-sm-4">
-            {{ form_widget(form.type, {'attr': {'class': 'form-control'}}) }}
-        </div>
-    </div>
 
     <div class="form-group">
         {{ form_label(form.reference, "Réference", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
@@ -67,13 +60,33 @@
             {{ form_widget(form.reference, {'attr': {'class': 'form-control'}}) }}
         </div>
     </div>
-
     <div class="form-group">
-        {{ form_label(form.currentPdf, "Fichier (PDF)", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
-        {{ form_errors(form.currentPdf) }}
+        {{ form_label(form.liasse, "Liasse", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
         <div class="col-sm-4">
-            {{ form_widget(form.currentPdf.file, {'attr': {'class': 'form-control'}}) }}
+            {{ form_widget(form.liasse) }}
+            <span class="alert-warning liasse-msg hide">Renseigner le code contrat et la référence d'abord.</span>
         </div>
+    </div>
+
+    <div id="liasse-ok">
+        <div class="form-group">
+            {{ form_label(form.type, "Type", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+            {{ form_errors(form.type) }}
+            <div class="col-sm-4">
+                {{ form_widget(form.type, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+
+        <div class="form-group">
+            {{ form_label(form.currentPdf, "Fichier (PDF)", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+            {{ form_errors(form.currentPdf) }}
+            <div class="col-sm-4">
+                {{ form_widget(form.currentPdf.file, {'attr': {'class': 'form-control'}}) }}
+            </div>
+        </div>
+    </div>
+    <div class="liasse-pdfs">
+
     </div>
 
     {{ form_rest(form) }}
