--- a/src/DocBundle/Resources/views/parametrage/show.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/show.html.twig
@@ -63,9 +63,9 @@
                 </a>
 
                 <a href="{{ path('parametrage_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
-                <a href="{{ path('parametrage_delete', { 'id': parametrage.id }) }}">
+                <!--<a href="{{ path('parametrage_delete', { 'id': parametrage.id }) }}">
                     <button type="button" class="btn btn-danger">Supprimer</button>
-                </a>
+                </a>-->
                 <!--{{ form_start(delete_form) }}
                 <button type="button" class="btn btn-danger">Supprimer</button>
                 {{ form_end(delete_form) }}-->
