--- a/src/DocBundle/Resources/views/parametrage/edit.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/edit.html.twig
@@ -24,9 +24,9 @@
             </div>
             <div class="panel-footer">
                 <a href="{{ path('parametrage_index') }}"><button type="button" class="btn btn-info">Retourner à la liste</button></a>
-                <a href="{{ path('parametrage_delete', { 'id': parametrage.id }) }}">
+                <!--<a href="{{ path('parametrage_delete', { 'id': parametrage.id }) }}">
                     <button type="button" class="btn btn-danger">Supprimer</button>
-                </a>
+                </a>->
                 <!--{{ form_start(delete_form) }}
                 <button type="button" class="btn btn-danger">Supprimer</button>
                 {{ form_end(delete_form) }}-->
@@ -34,4 +34,58 @@
         </div>
     </div>
 </div>
+{% endblock %}
+{% block javascripts %}
+    {{ parent() }}
+    <script type="text/javascript">
+        var displayList = function() {
+            if($('#parametrage_liasse').is(':checked')) {
+                if (checkRequireField()) {
+                    hideFieds();
+                    $('.liasse-pdfs').removeClass('hide');
+                    sendData();
+                } else {
+                    $('#parametrage_liasse').prop('checked',false);
+                }
+            } else {
+                $('#liasse-ok').removeClass('hide');
+                $('.liasse-pdfs').empty();
+                $('.liasse-pdfs').addClass('hide');
+            }
+        };
+
+        var sendData = function () {
+            var cont = $('#parametrage_contrat').val();
+            var ref = $('#parametrage_reference').val();
+            var data = {reference: ref, contrat: cont};
+            $.post('/parametrage/liassepdf', data)
+                    .done(function (elt) {
+                        $('.liasse-pdfs').empty();
+                        for (var i = 0; i< elt.length; i++) {
+                            var orderField = '<input type="number" name="'+elt[i].pdf_id+'" class="col-xs-2" placeholder="ordre">';
+                            var champ = '<div class="col-sm-4"><input type="checkbox" name="pdfs[]" value="'+elt[i].pdf_id+'">'+elt[i].pdf+'</div>' ;
+                            var pdf = '<div class="form-group"><label for="" class="col-sm-3 control-label"></label>'+champ+''+orderField+'</div>';
+                            $('.liasse-pdfs').append(pdf);
+                        }
+                    });
+        };
+
+        var checkRequireField = function () {
+            if ($('#parametrage_contrat').val().length != 0 && $('#parametrage_reference').val().length != 0) {
+                return true;
+            }
+            $('.liasse-msg').removeClass('hide');
+            return false;
+        };
+
+        var hideFieds = function () {
+            var toHide = $('#liasse-ok');
+            toHide.find('#parametrage_type').removeAttr('required');
+            toHide.addClass('hide');
+        };
+        $(document).ready(function()
+        {
+            displayList();
+        });
+    </script>
 {% endblock %}
