--- a/src/DocBundle/Resources/views/parametrage/form.html.twig
+++ b/src/DocBundle/Resources/views/parametrage/form.html.twig
@@ -84,6 +84,7 @@
                 {{ form_widget(form.currentPdf.file, {'attr': {'class': 'form-control'}}) }}
             </div>
         </div>
+        <input type="hidden" value="{{ app.request.getBaseURL() }}" id="baseUrl">
     </div>
     <div class="liasse-pdfs">
 
